fix node module error

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loopback-chai",
   "version": "1.0.0",
   "description": "Chai assertions for loopback",
-  "main": "index.js",
+  "main": "dist/loopback-chai.js",
   "scripts": {
     "test": "npx jest",
     "build": "rollup -c",
@@ -37,6 +37,7 @@
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.3.0"
   },
   "files": [
