--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^22.4.3",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.57.1",
+    "rollup-plugin-auto-external": "^1.2.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-json": "^2.3.0",
