--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chai assertions for loopback",
   "main": "dist/loopback-chai.js",
   "scripts": {
-    "test": "npx jest",
+    "test": "npx eslint . && npx jest",
     "build": "rollup -c",
     "dev": "rollup -c -w"
   },
@@ -32,6 +32,10 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "conventional-changelog-cli": "^1.3.21",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
     "jest": "^22.4.3",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.57.1",
