--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
-    "one-var-declaration-per-line": "off"
+    "one-var-declaration-per-line": "off",
+    "no-underscore-dangle": "off"
   },
   "globals": {
     "describe": true,
