--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
     "one-var-declaration-per-line": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-unused-expressions": "off"
   },
   "globals": {
     "describe": true,
