--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chai assertions for loopback",
   "main": "dist/loopback-chai.js",
   "scripts": {
-    "test": "npx eslint . && npx jest",
+    "test": "npx eslint . && npx jest --coverage",
     "build": "rollup -c",
     "dev": "rollup -c -w"
   },
